# Spectralysis

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  engine_wrapper.cpp  engine_wrapper.h
Engine/Shaders/: compile.bat  filter.comp  filter.spv  read.comp  read.spv  sdft.comp  sdft.spv  sum.comp  sum.spv
Engine/inc/: SDFTFilter.h  VulkanCommon.h
Engine/src/: SDFTFilter.cpp  VulkanCommon.cpp
PythonWrapper/: CMakeLists.txt  PySpectralysis.cpp  uiapp.py
